# maligner

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/: human.NtBspQI.smoothed.map
examples/: contigs.BamHI.maps  contigs.BamHI.smoothed.maps  contigs_to_ref.aln  ecoli_example.sh  ecoli_k12_ref.BamHI.maps  ecoli_k12_ref.BamHI.smoothed.maps
lib/: CMakeLists.txt
lib/malignpy/: __init__.py  alignment_json_utils.py  malignpy_wrapper.py  utils.py
lib/malignpy/common/: __init__.py  dict_wrap.py  parse_nucmer_coords.py  wrap_file_function.py
lib/malignpy/core/: __init__.py  alignments.py  kmer_match_alignments.py  maligner_dp_alignments.py  null_distribution.py
lib/malignpy/maps/: MalignerMap.py  SOMAMap.py  __init__.py  utils.py
lib/malignpy/schwartz/: parse_soma_alignments.py
src/: ._build_clean.sh  .gitignore  CMakeLists.txt  ScoreCell.cc  ScoreCell.h  ScoreMatrix.cc  ScoreMatrix.h  align.cc  align.h  boost_wrapper.cc  build  clean_build  errors.txt  globals.cc  globals.h  makefile  malignpy.cc  test  types.h  utils.h
src/common/: CMakeLists.txt  bitcover.h  common_defs.h  common_math.cpp  common_math.h  common_types.h  map.cpp  map.h  map_data.cpp  map_data.h  map_reader.cpp  map_reader.h  map_sampler.cpp  map_sampler.h  map_wrapper_base.h  safe_ptr_write.h  scorer.h  timer.cpp  timer.h
src/dp/: CMakeLists.txt  ScoreCell.cpp  ScoreCell.h  ScoreMatrix.cc  ScoreMatrix.h  align.cc  align.cpp  align.h  alignment.cc  alignment.cpp  alignment.h  chunk.cpp  chunk.h  globals.cc  globals.cpp  globals.h  malignpy.cc  map_data.cc  map_data.h  map_wrappers.h  matched_chunk.cc  matched_chunk.cpp  matched_chunk.h  partialsums.cpp  partialsums.h  templated_align_functions.h  types.h  utils.h
src/ix/: CMakeLists.txt  map_chunk_db.cpp  map_chunk_db.h  map_frag.h  map_frag_db.cpp  map_wrapper_ix.h
src/kmer_match/: CMakeLists.txt  Makefile  error_model.cpp  error_model.h  map.cpp  map.h  map_chunk.cpp  map_chunk.h  map_chunk_db.cpp  map_chunk_db.h  map_frag.cpp  map_frag.h  map_frag_db.cpp  map_frag_db.h  map_reader.cpp  map_reader.h  ref_alignment.cpp  ref_alignment.h
src/test/: CMakeLists.txt  test_PartialSumsC.cpp  test_mad.cpp  test_maligner_dp.cpp  test_maligner_dp_get_all.cpp  test_maligner_dp_max_miss.cpp  test_maligner_dp_row_vs_column.cpp  test_maligner_dp_sizing_penalty.cpp  test_map_sampler.cpp  test_scorematrix.cpp  test_scorematrix_ijkl.cpp  test_scorematrix_shape.cpp  test_sizes.cpp
src/vd/: CMakeLists.txt  score_matrix_profile.cpp  score_matrix_profile.h  score_matrix_vd.cpp  score_matrix_vd.h  score_matrix_vd_db.h
test/: __init__.py  gtest_align  gtest_align.cc  makefile  null_distribution.py  null_distribution_simulator.py  null_distribution_simulator2.py  read_alignments.py  test_malignpy.py  test_np_slice.py
